--- a/Main.html
+++ b/Main.html
@@ -8,8 +8,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	-->
 		<title>玻璃穹顶</title>
-		<link rel="stylesheet" type="text/css" href="../CSS/Glass.css" />
-		<script src="../JS/Story.js"></script>
+		<link rel="stylesheet" type="text/css" href="./CSS/Glass.css" />
+		<script src="./JS/Story.js"></script>
 	</head>
 
 	<body>
