--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="author" content="羚灯">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
 
 		<title>玻璃穹顶</title>
 		<link rel="stylesheet" type="text/css" href="./CSS/Glass.css" />
