--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="zh">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="author" content="羚灯">
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
+<head>
+	<meta charset="UTF-8">
+	<meta name="author" content="羚灯">
 
-		<title>玻璃穹顶</title>
-		<link rel="stylesheet" type="text/css" href="./CSS/Glass.css" />
-		<script src="./JS/Story.js"></script>
-	</head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
 
-	<body>
+	<title>玻璃穹顶</title>
+	<link rel="stylesheet" type="text/css" href="./CSS/Glass.css" />
+	<script src="./JS/Story.js"></script>
+</head>
 
+<body>
+	<div id="frame">
 		<div id="title">
 			<h1>玻璃穹顶</h1>
 		</div>
@@ -31,5 +32,8 @@
 			<p><br></p>
 			<p><br></p>
 		</div>
-	</body>
+	</div>
+
+</body>
+
 </html>
